# infosec-labs

./: README.md  main.py  pyproject.toml
lab1/: decoder.py  input  input_decoded.txt
lab16/: Dockerfile  README.md  main.py
lab17/: Dockerfile  README.md  main.py
lab6/: decoder.py  encoder.py
lab7/: audio_data.py  decoder.py  encoder.py
